third_party/jerryscript/jerryscript/tests/jerry/fail/1/escape-sequences-invalid-hex.js
// SPDX-FileCopyrightText: 2015 Samsung Electronics Co., Ltd.
// SPDX-License-Identifier: Apache-2.0

var str = '\x5t';
